--- a/.github/workflows/docker-solr.yml
+++ b/.github/workflows/docker-solr.yml
@@ -4,8 +4,8 @@ on:
   push:
     # Publish `master` as Docker `latest` image.
     branches:
-      - master
-      - docker
+      - main
+      - redesign
 
     # Publish `v1.2.3` tags as releases.
     tags:
