--- a/config/settings.yml
+++ b/config/settings.yml
@@ -44,6 +44,7 @@ FIELDS:
   :TEMPORAL: 'dct_temporal_sm'
   :TITLE: 'dc_title_s'
   :SOURCE: 'dc_source_sm'
+  :DATE_PUBLISHED: 'dct_issued_s'
 
 # Institution deployed at
 INSTITUTION: 'FRDR'
