RDM-5591 Add additional metadata to item landing pages

--- a/config/settings.yml
+++ b/config/settings.yml
@@ -27,22 +27,31 @@ OVERLAP_RATIO_BOOST: '2'
 
 # Solr field mappings
 FIELDS:
+  :AFFILIATION: 'dct_affiliation_sm'
+  :CONTRIBUTOR: 'dct_contributor_sm'
   :FILE_FORMAT: 'dc_format_s'
   :GEOMETRY: 'solr_geom'
   :WXS_IDENTIFIER: 'layer_id_s'
   :RIGHTS: 'dc_rights_s'
   :PROVENANCE: 'dct_provenance_s'
   :GEOM_TYPE: 'layer_geom_type_s'
+  :SERIES: 'dc_series_sm'
   :SPATIAL_COVERAGE: 'dct_spatial_sm'
   :SUBJECT: 'dc_subject_sm'
+  :SUBJECT_EN: 'dc_subject_en_sm'
+  :SUBJECT_FR: 'dc_subject_fr_sm'
   :REFERENCES: 'dct_references_s'
   :YEAR: 'solr_year_i'
   :CREATOR: 'dc_creator_sm'
   :DESCRIPTION: 'dc_description_s'
+  :DESCRIPTION_EN: 'dc_description_en_s'
+  :DESCRIPTION_FR: 'dc_description_fr_s'
   :PUBLISHER: 'dc_publisher_s'
   :PART_OF: 'dct_isPartOf_sm'
   :TEMPORAL: 'dct_temporal_sm'
   :TITLE: 'dc_title_s'
+  :TITLE_EN: 'dc_title_en_s'
+  :TITLE_FR: 'dc_title_fr_s'
   :SOURCE: 'dc_source_sm'
   :DATE_PUBLISHED: 'dct_issued_s'
 
