--- a/config/settings.yml
+++ b/config/settings.yml
@@ -55,6 +55,7 @@ FIELDS:
   :TITLE_EN: 'dc_title_en_s'
   :TITLE_FR: 'dc_title_fr_s'
   :SOURCE: 'dc_source_sm'
+  :SOURCE_ICON: 'frdr_origin_icon'
   :DATE_PUBLISHED: 'dct_issued_s'
   :BBOXES: 'bboxes_sm'
   :LINES: 'lines_sm'
