Add dev branch to build containers for

--- a/.github/workflows/docker-geoblacklight.yml
+++ b/.github/workflows/docker-geoblacklight.yml
@@ -5,6 +5,7 @@ on:
     # Publish `main` as Docker `latest` image.
     branches:
       - main
+      - dev
       - docker
       - akm220
       - pmd
