--- a/config/database.yml
+++ b/config/database.yml
@@ -4,28 +4,24 @@
 #   Ensure the SQLite 3 gem is defined in your Gemfile
 #   gem 'sqlite3'
 #
+
 default: &default
-  adapter: postgresql
-  encoding: unicode
-  host: <%= ENV.fetch("GEOBLACKLIGHT_POSTGRES_HOST") %>
-  username: <%= ENV.fetch("GEOBLACKLIGHT_POSTGRES_USER") %>
-  password: <%= ENV.fetch("GEOBLACKLIGHT_POSTGRES_PASSWORD") %>
+  adapter: sqlite3
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
   timeout: 5000
-  port: <%= ENV.fetch("GEOBLACKLIGHT_POSTGRES_PORT") %>
-
 
 development:
   <<: *default
-  database: development
+  database: db/development.sqlite3
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: test
+  database: db/test.sqlite3
 
 production:
   <<: *default
-  database: production
+  database: db/production.sqlite3
+
