--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,17 +1,18 @@
 version: '3'
 volumes:
   solr_data_vol:
-  db_data_vol:
-  geoblacklight_data_vol:
-  geoblacklight_static_assets_vol:
-  geoserver_data_vol:
-  postgis_data_vol:
+  geoblacklight_src:
+  geoblacklight_db:
+  gem_cache:
+  node_modules:
 
 services:
   geoblacklight:
-    build: .
+    build:
+      context: .
+      dockerfile: Dockerfile.dev
     environment:
-      RAILS_ENV: production
+      RAILS_ENV: development
       RAILS_LOG_TO_STDOUT: "true"
       SECRET_KEY_BASE: "not_a_secret"
       SOLR_URL: http://solr:8983/solr/geoblacklight
@@ -19,21 +20,16 @@ services:
       GEOBLACKLIGHT_POSTGRES_PASSWORD: postgres
       GEOBLACKLIGHT_POSTGRES_HOST: db
       GEOBLACKLIGHT_POSTGRES_PORT: 5432
+
     volumes:
-        #- geoblacklight_data_vol:/usr/src/app 
-      - geoblacklight_static_assets_vol:/usr/src/public
+      - ./app:/usr/src/app
+      - geoblacklight_db:/usr/src/db
+      - gem_cache:/usr/local/bundle/gems
+      - node_modules:/app/node_modules
     ports:
       - "3000:3000"
     depends_on:
-      - db
       - solr
-
-        #  geocombine:
-        #    build: 
-        #      context: .
-        #      dockerfile: Dockerfile.geocombine
-        #    environment:
-        #      SOLR_URL: http://solr:8983/solr/geoblacklight
 
   solr:
     build:
@@ -47,45 +43,4 @@ services:
       - solr_data_vol:/var/solr/data
     ports:
       - "8983:8983"
-
-  db:
-    image: postgres:12
-    volumes:
-      - db_data_vol:/var/lib/postgresql/data
-    environment:
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: postgres
-    ports:
-      - "5432:5432"
-
-  geoserver:
-    image: kartoza/geoserver
-    environment:
-      - GEOSERVER_ADMIN_USER=admin
-      - GEOSERVER_ADMIN_PASSWORD=testpassword
-      - STABLE_EXTENSIONS=importer-plugin
-    volumes:
-      - geoserver_data_vol:/opt/geoserver/data_dir
-    ports:
-      - "8600:8080"
-  
-  postgis:
-    image: kartoza/postgis
-    environment:
-      POSTGRES_USER: postgres
-      POSTGRES_PASS: postgres
-      POSTGRES_DB: vectordata
-    volumes:
-      - postgis_data_vol:/var/lib/postgresql/data
-  
-  nginx:
-    image: nginx:1.19
-    volumes:
-      - ./nginx/nginx.conf:/etc/nginx/nginx.conf
-      - ./nginx/local.conf:/etc/nginx/conf.d/default.conf
-      - geoblacklight_static_assets_vol:/usr/share/nginx/html/geoblacklight/public/
-    ports:
-      - "80:80"
-    depends_on:
-      - geoblacklight
 
